--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         font-family: 'Plus Jakarta Sans', sans-serif;
         background-color: var(--bg);
         color: #f8fafc;
+        margin: 0;
         overflow-x: hidden;
       }
       h1, h2, h3, h4, .font-space { font-family: 'Space Grotesk', sans-serif; }
@@ -36,10 +37,6 @@
         border: 1px solid rgba(255, 255, 255, 0.08);
       }
 
-      .glow-blue {
-        box-shadow: 0 0 40px rgba(59, 130, 246, 0.15);
-      }
-
       .marquee-container {
         overflow: hidden; white-space: nowrap;
         mask-image: linear-gradient(to right, transparent, black 15%, black 85%, transparent);
@@ -59,12 +56,6 @@
       ::-webkit-scrollbar-track { background: var(--bg); }
       ::-webkit-scrollbar-thumb { background: #1e293b; border-radius: 10px; }
       ::-webkit-scrollbar-thumb:hover { background: var(--accent); }
-
-      .active-tab {
-        background: #3b82f6;
-        color: white;
-        box-shadow: 0 10px 25px rgba(59, 130, 246, 0.3);
-      }
     </style>
     <script type="importmap">
 {
@@ -83,6 +74,7 @@
   <body>
     <div class="mesh-bg"></div>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <!-- Jalur relatif agar work di GitHub Pages -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
